--- a/开发源码/index.html
+++ b/开发源码/index.html
@@ -475,6 +475,34 @@
                     })
                 .addPage()
                     .addComponent('caption',{text:'课程难度分布'})//point
+                    .addComponent('point',{
+                            type    : 'point',
+                            text    : '',
+                            width   : 300,
+                            height  : 300,
+                            center  : true,
+                            data    : [
+                                ['中级', .4, '#ff7676'],
+                                ['初级', .2, '#ffa3a4', 0, '-60%'],
+                                ['高级', .3, '#99c1ff', '50%', '-120%' ]
+                            ],
+                            css     : {bottom:'-50%',opacity:0},
+                            animateIn:{bottom:'26%',opacity:1},
+                            animateOut:{bottom:'-50%',opacity:0},
+                    })
+                    .addComponent('msg',{
+                        text:'不同课程报名人数超过一万占比',
+                        css:{
+                            opacity:0,
+                            bottom:100,
+                            textAlign:'center',
+                            width:'100%',
+                            color:'#000'
+                        },
+                        animateIn:{opacity:1},
+                        animateOut:{opacity:0},
+                        delay:1500
+                    })
                 .addPage('tail')
                     .addComponent('logo',{
                         center:true,
@@ -513,7 +541,7 @@
                             $.fn.fullpage.moveTo(1);
                         }
                     })
-                .loader(8);
+                .loader();
             }
         }
         $(function(){
